--- a/0.혜지-유틸리티.css
+++ b/0.혜지-유틸리티.css
@@ -240,7 +240,7 @@ div {
     background-color: #000000;
 }
 .img1111-1{
-    width: 640px;
+    width: 90%;
     height: 295px;
     margin: 5%;
     background-color: #111111;
