--- a/0main.css
+++ b/0main.css
@@ -34,6 +34,7 @@ p {
 hr {
     width: 80%;
     margin-left: 10%;
+    margin-top: 2%;
 }
 .frame {
     width: 90%;
@@ -114,8 +115,8 @@ button {
     height: 230px;
     background-color: black; /* 배경 검정*/
     overflow: hidden;
-    margin-top: 35px;
-    margin-left: 115px;
+    margin-top: 5%;
+    margin-left: 18%;
 }
 
 .slide-container {
