--- a/0main.css
+++ b/0main.css
@@ -34,6 +34,7 @@ p {
 hr {
     width: 80%;
     margin-left: 10%;
+    margin-top: 1%;
 }
 .frame {
     width: 90%;
@@ -110,16 +111,19 @@ button {
 
 .container,.container2 {
     display: flex;
-    width: 1200px;
-    height: 230px;
+    width:80%;
+    height: 20%;
     background-color: black; /* 배경 검정*/
     overflow: hidden;
-    margin-top: 35px;
-    margin-left: 115px;
+    margin-top: 4%;
+    margin-left:10%;
+    margin-right:10%;
+    
 }
 
 .slide-container {
     /* 가운데 정렬 */
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -147,11 +151,6 @@ button {
     width: 400px;
     height: 200px;
     margin: 5px;
-}
-.slide-image > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 
