--- a/0서폿의정의.css
+++ b/0서폿의정의.css
@@ -119,10 +119,8 @@ button {
 
 
 img{
-    width: 390px;
-    height: 290px;
-    margin-left: 10px;
-    margin-top: 8px;
+    width: 50%;
+    height: 50%;
 }
 .box1-5{
     background-size: contain;
@@ -130,13 +128,15 @@ img{
 .box2{
     margin-left: 5%;
     margin-right: 5%;
-    width: 50%;
+    width: 30%;
     font-size: 20px;
 }
 
-.slide-image {
-    width: 1600px;
-    height: 300px;
-    margin: 5px;
-    background-size: contain;
+
+.box1{
+    width:55%;
+    height:50%;
+    
+    display:flex;
+    flex-wrap:wrap
 }
